# coinapi

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
configs/channels/: heartbeats_data.json  market_trades_data.json  ticker_data.json
configs/runner/: test.json
include/: authentication.h  dispatcher.h  order_book_worker.h  ringbuffer.h  spscqueue.h  websocket.h
include/enums/: channel_type.h  message_types.h  order_side.h
include/states/: order_book_state.h  trade_state.h  trade_tape.h
include/structs/: backfill_req.h  heartbeat_event.h  level_tape.h  market_event.h  order_book.h  raw_message.h  ticker_event.h  trade_event.h  trade_tape.h
include/workers/: backfill_worker.h  order_book_worker.h  trade_worker.h
src/: authentication.cpp  backfill_worker.cpp  dispatcher.cpp  main.cpp  order_book.cpp  order_book_state.cpp  order_book_worker.cpp  ringbuffer.cpp  spscqueue.cpp  trade_state.cpp  trade_tape.cpp  trade_worker.cpp  websocket.cpp
test/: coinapi_test.py  dummy.cpp
